index.css
/* ... */
.playstore {
  margin: 8px;
  height: 80px;
}


.home-container01 {
  flex: 1;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
}

.home-container02 {
  margin: var(--dl-space-space-twounits);
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

.home-image {
  width: 80px;
  object-fit: cover;
}

.home-text {
  color: #000000;
  font-size: 24px;
  margin-top: 10px;
  font-family: "Poppins";
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

.home-icon-group {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
}

.home-link {
  display: contents;
}

.home-image1 {
  width: 28px;
  margin: var(--dl-space-space-halfunit);
  object-fit: cover;
  text-decoration: none;
}

.home-link1 {
  display: contents;
}

.home-icon {
  width: 24px;
  height: 24px;
  margin: var(--dl-space-space-halfunit);
  text-decoration: none;
}

.home-container03 {
  width: auto;
  height: auto;
  display: flex;
  margin-top: 0px;
  align-items: center;
  margin-left: var(--dl-space-space-fourunits);
  margin-right: var(--dl-space-space-fourunits);
  flex-direction: column;
}

.home-image2 {
  width: 714px;
  object-fit: cover;
}

.home-container04 {
  width: 100%;
  display: flex;
  align-self: center;
  align-items: center;
  margin-right: 0px;
  flex-direction: column;
}

.home-text03 {
  font-size: 2em;
  align-self: center;
  margin-top: var(--dl-space-space-unit);
  text-align: center;
  font-family: "BubbleboddyNeueTrial-Regular";
  font-weight: 600;
  margin-bottom: var(--dl-space-space-unit);
  animation-name: pulse;
  animation-delay: 1s;
  animation-duration: 500ms;
  animation-direction: normal;
  animation-iteration-count: 1;
  animation-timing-function: ease;
}

.home-text05 {
  color: #000000;
  font-weight: 400;
}

.home-text06 {
  color: #000000;
  font-weight: 400;
}

.home-text08 {
  color: #ff9770;
}

.home-text10 {
  color: #ff9770;
}

.home-text11 {
  color: #ff9770;
}

.home-hashtags {
  color: #000000;
  font-size: 18px;
  font-family: "Poppins";
  font-weight: 400;
  margin-bottom: var(--dl-space-space-oneandhalfunits);
}

.home-link2 {
  color: rgb(255, 255, 255);
  font-size: 1.5rem;
  justify-content: center;
  align-self: center;
  box-shadow: 4px 4px 4px 0px #000000;
  margin-top: var(--dl-space-space-halfunit);
  transition: 0.3s;
  font-family: "Poppins";
  margin-left: 0px;
  padding-top: var(--dl-space-space-unit);
  border-color: var(--dl-color-gray-500);
  border-width: 0px;
  padding-left: var(--dl-space-space-fourunits);
  border-radius: var(--dl-radius-radius-radius8);
  padding-right: var(--dl-space-space-fourunits);
  padding-bottom: var(--dl-space-space-unit);
  text-decoration: none;
  background-color: rgb(0, 0, 0);
}

.home-link2:hover {
  color: var(--dl-color-gray-white);
  background-color: rgb(255, 151, 112);
}

.home-container05 {
  flex: 0 0 auto;
  width: 100%;
  display: flex;
  align-self: flex-start;
  margin-top: var(--dl-space-space-oneandhalfunits);
  align-items: center;
  margin-left: 0px;
  margin-right: var(--dl-space-space-unit);
  margin-bottom: var(--dl-space-space-oneandhalfunits);
  justify-content: center;
  flex-direction: column;
}

.home-container06 {
  flex: 0 0 auto;
  width: 64px;
  display: flex;
  align-items: center;
  margin-right: 0px;
}

.home-icon2 {
  color: var(--dl-color-gray-500);
  width: 24px;
  height: 24px;
  margin: var(--dl-space-space-halfunit);
}

.home-text13 {
  color: #666666;
  font-size: 12px;
  font-family: "Poppins";
}

.home-container07 {
  width: 250px;
  align-items: center;
  text-align: center;
  justify-content: center;
}

.home-icon4 {
  width: 20px;
  height: 20px;
  margin: var(--dl-space-space-halfunit);
}

.home-text16 {
  color: #666666;
  font-size: 12px;
  font-family: "Poppins";
}

.home-image3 {
  width: 600px;
  height: 355px;
  object-fit: cover;
  flex-shrink: 0;
}

.home-footer {
  flex: 0;
  width: 100%;
  display: flex;
  max-width: var(--dl-size-size-maxwidth);
  align-items: center;
  padding-top: var(--dl-space-space-twounits);
  padding-left: var(--dl-space-space-threeunits);
  padding-right: var(--dl-space-space-threeunits);
  flex-direction: column;
  padding-bottom: var(--dl-space-space-twounits);
  justify-content: space-between;
}

.home-container08 {
  display: flex;
  max-width: var(--dl-size-size-maxwidth);
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
}

.home-nav {
  flex: 0 0 auto;
  display: flex;
  margin-top: 0px;
  align-items: center;
  flex-direction: row;
}

.home-link3 {
  font-size: 14px;
  font-family: "Poppins";
  margin-left: 0px;
  text-decoration: none;
}

.home-link4 {
  font-size: 14px;
  font-family: "Poppins";
  margin-left: var(--dl-space-space-unit);
  text-decoration: none;
}

.home-link5 {
  font-size: 14px;
  font-family: "Poppins";
  margin-left: var(--dl-space-space-unit);
  text-decoration: none;
}

.home-separator {
  flex: 0 0 auto;
  width: 100%;
  height: 0px;
  display: flex;
  margin-top: var(--dl-space-space-halfunit);
  align-items: flex-start;
  margin-left: 0px;
  border-color: rgba(217, 217, 217, 0);
  border-style: solid;
  border-width: 1px;
  margin-right: 0px;
  margin-bottom: var(--dl-space-space-halfunit);
  flex-direction: row;
  border-top-width: 0px;
  border-left-width: 0px;
  border-right-width: 0px;
}

.home-container09 {
  flex: 0 0 auto;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
}

.home-text19 {
  font-size: 12px;
}
/* ... */

